--- a/src/com/company/jenkins/Jenkinsfile
+++ b/src/com/company/jenkins/Jenkinsfile
@@ -3,8 +3,8 @@ pipeline {
     stages {
         stage('Build Test Script') {
             steps {
-                'javac -d . test_script.java'
-                'java com.company.jenkins.test_script'
+                javac -d . 'test_script.java'
+                java 'com.company.jenkins.test_script'
             }
         }
     }
