Update to JenkinsFile

--- a/src/com/company/jenkins/Jenkinsfile
+++ b/src/com/company/jenkins/Jenkinsfile
@@ -3,8 +3,7 @@ pipeline {
     stages {
         stage('Build Test Script') {
             steps {
-                sh 'javac -d . test_script.java'
-                sh 'java com.company.jenkins.test_script'
+                echo "TESTING"
             }
         }
     }
