--- a/src/com/company/userPassword/emailPassword.yml
+++ b/src/com/company/userPassword/emailPassword.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   vars:
-    accountInfo: "{{ lookup('file', 'account_info.json') }}"
+    accountInfo: "{{ lookup('file', 'accountInfo.json') }}"
 
 
   tasks:
