Update to ansible script

--- a/src/com/company/ansible/emailPassword.yml
+++ b/src/com/company/ansible/emailPassword.yml
@@ -7,9 +7,8 @@
   tasks:
     - name: Set Var
       set_fact:
-        username: "{{ item.username }}"
-        email: "{{ item.email }}"
-      loop: "{{ accountInfo }}"
+        username: "{{ accountInfo.username }}"
+        email: "{{ accountInfo.email }}"
 
     - name: Create Password
       shell: python3 generatePassword.py
