Update for pipeline

--- a/src/com/company/jenkins/Jenkinsfile
+++ b/src/com/company/jenkins/Jenkinsfile
@@ -1,22 +1,12 @@
 pipeline {
     agent any
     stages {
-        stage('Run Test on Dish') {
+        stage('Email User their password') {
             steps {
-                dir('src/com/company/jenkins/test') {
+                dir('src/com/company/ansible') {
                     sh "pwd"
-                    sh 'javac dishTest.java'
-                    sh 'java dishTest'
+                    sh 'ansible-playbook emailPassword.yml'
                 }
-            }
-        }
-        stage('Run Test on User') {
-            steps {
-                dir('src/com/company/jenkins/test') {
-                    sh "pwd"
-                    sh 'javac userTest.java'
-                    sh 'java userTest'
-                }                
             }
         }
     }
