Update for jenkins

--- a/src/com/company/ansible/emailPassword.yml
+++ b/src/com/company/ansible/emailPassword.yml
@@ -1,8 +1,7 @@
 ---
-- hosts: localhost
+- hosts: all
   vars:
     accountInfo: "{{ lookup('file', 'accountInfo.json') }}"
-
 
   tasks:
     - name: Set Var
